错别字修改

--- a/bib/chap3.bib
+++ b/bib/chap3.bib
@@ -19,3 +19,157 @@
   year={1995},
   publisher={Elsevier}
 }
+
+@article{neu2011necrotizing,
+	Author = {Neu, Josef and Walker, W Allan},
+	Journal = {New England Journal of Medicine},
+	Number = {3},
+	Pages = {255--264},
+	Publisher = {Mass Medical Soc},
+	Title = {Necrotizing enterocolitis},
+	Volume = {364},
+	Year = {2011}
+}
+
+@article{yu1980improving,
+	Author = {Yu, VY and Hollingsworth, E},
+	Journal = {Archives of disease in childhood},
+	Number = {6},
+	Pages = {422--426},
+	Publisher = {BMJ Publishing Group Ltd},
+	Title = {Improving prognosis for infants weighing 1000 g or less at birth.},
+	Volume = {55},
+	Year = {1980}
+}
+
+@article{liang2014role,
+  Author = {Liang, Jie and Sha, Su Mei and Wu, Kai Chun},
+	Journal = {Journal of digestive diseases},
+	Number = {12},
+	Pages = {641--646},
+	Publisher = {Wiley Online Library},
+	Title = {Role of the intestinal microbiota and fecal transplantation in inflammatory bowel diseases},
+	Volume = {15},
+	Year = {2014}
+}
+
+@article{imamura1992mucosal,
+  title={Mucosal immune defence mechanisms in enterocolitis complicating Hirschsprung's disease.},
+  author={Imamura, A and Puri, P and O'Briain, DS and Reen, DJ},
+  journal={Gut},
+  volume={33},
+  number={6},
+  pages={801--806},
+  year={1992},
+  publisher={BMJ Publishing Group}
+}
+
+@article{Downard2012Treatment,
+  title={Treatment of necrotizing enterocolitis: an American Pediatric Surgical Association Outcomes and Clinical Trials Committee systematic review},
+  author={Downard, C. D. and Renaud, E and St Peter, S. D. and Abdullah, F and Islam, S and Saito, J. M. and Blakely, M. L. and Huang, E. Y. and Arca, M. J. and Cassidy, L},
+  journal={Journal of Pediatric Surgery},
+  volume={47},
+  number={11},
+  pages={2111-2122},
+  year={2012},
+}
+
+@article{Santha2017Mucosal,
+  title={Mucosal Healing in Clinical Practice: A Single-Center Pediatric IBD Experience.},
+  author={Santha, S. L. and Shankar, P. R. and Pan, A. and Schoen, B and Kugathasan, S and Sauer, C. G.},
+  journal={Inflammatory Bowel Diseases},
+  volume={23},
+  number={8},
+  pages={1},
+  year={2017},
+}
+
+@article{Denning2016Pathogenesis,
+  title={Pathogenesis of NEC: Role of the innate and adaptive immune response.},
+  author={Denning, T. L. and Bhatia, A. M. and Kane, A. F. and Patel, R. M. and Denning, P. L.},
+  journal={Seminars in Perinatology},
+  volume={41},
+  number={1},
+  pages={15-28},
+  year={2016},
+}
+
+@article{Nakamura2017Inflammatory,
+  title={Inflammatory bowel disease in patients with Hirschsprung’s disease: a systematic review and meta-analysis},
+  author={Nakamura, H. and Lim, T. and Puri, P.},
+  journal={Pediatric Surgery International},
+  volume={34},
+  number={Suppl 1},
+  pages={1-6},
+  year={2017},
+}
+
+@article{Hosny2017Updating,
+  title={Updating on gut microbiota and its relationship with the occurrence of necrotizing enterocolitis},
+  author={Hosny, Michel and Cassir, Nadim and Scola, Bernard La},
+  journal={Human Microbiome Journal},
+  volume={4},
+  pages={14-19},
+  year={2017},
+}
+
+@article{Ni2017Gut,
+  title={Gut microbiota and IBD: causation or correlation?},
+  author={Ni, Josephine and Wu, Gary D. and Albenberg, Lindsey and Tomov, Vesselin T.},
+  journal={Nature Reviews Gastroenterology & Hepatology},
+  volume={14},
+  number={10},
+  pages={573},
+  year={2017},
+}
+
+@article{Li2016Characterization,
+  title={Characterization of Intestinal Microbiomes of Hirschsprung’s Disease Patients with or without Enterocolitis Using Illumina-MiSeq High-Throughput Sequencing:},
+  author={Li, Yuqing and Valeriy, Poroyko and Yan, Zhilong and Pan, Liya and Yi, Feng and Zhao, Peihua and Xie, Zhoulonglong and Li, Hong},
+  journal={Plos One},
+  volume={11},
+  number={9},
+  pages={e0162079},
+  year={2016},
+}
+
+@article{Yan2014Characterization,
+  title={Characterization of the intestinal microbiome of Hirschsprung’s disease with and without enterocolitis},
+  author={Yan, Zhilong and Poroyko, Valeriy and Gu, Song and Zhang, Zheng and Pan, Liya and Wang, Jing and Bao, Nan and Hong, Li},
+  journal={Biochem Biophys Res Commun},
+  volume={445},
+  number={2},
+  pages={269-274},
+  year={2014},
+}
+
+@article{stewart2018temporal,
+  title={Temporal development of the gut microbiome in early childhood from the TEDDY study},
+  author={Stewart, Christopher J and Ajami, Nadim J and O’Brien, Jacqueline L and Hutchinson, Diane S and Smith, Daniel P and Wong, Matthew C and Ross, Matthew C and Lloyd, Richard E and Doddapaneni, HarshaVardhan and Metcalf, Ginger A and others},
+  journal={Nature},
+  volume={562},
+  number={7728},
+  pages={583},
+  year={2018},
+  publisher={Nature Publishing Group}
+}
+
+@article{Sj2010Influence,
+  title={Influence of early gut microbiota on the maturation of childhood mucosal and systemic immune responses.},
+  author={Sjögren, Y. M and Tomicic, S and Lundberg, A and Böttcher, M. F and Björkstén, B and Sverremarkekström, E and Jenmalm, M. C},
+  journal={Clinical & Experimental Allergy},
+  volume={39},
+  number={12},
+  pages={1842-1851},
+  year={2010},
+}
+
+@article{Ben2014Microbiota,
+  title={Microbiota diversity and gene expression dynamics in human oral biofilms},
+  author={Benítez-Páez, Alfonso and Belda-Ferre, Pedro and Simón-Soro, Aurea and Mira, Alex},
+  journal={BMC Genomics,15,1(2014-04-27)},
+  volume={15},
+  number={1},
+  pages={311-311},
+  year={2014},
+}
