--- a/tex/abstract.tex
+++ b/tex/abstract.tex
@@ -7,52 +7,38 @@
 %%==================================================
 
 \begin{abstract}
-  \textbf{肠道菌群纵向模式与早产儿坏死性小肠结肠炎研究}
+  \textbf{第一部分：肠道菌群模式与早产儿坏死性小肠结肠炎和迟发型脓毒血症研究}
     \begin{description}
-      \item[目的] 探究早产儿坏死性小肠结肠炎(NEC)和迟发型败血症（LOS）与出生后肠道菌群定植模式的相关性。
-      \item[方法] 入组24名早产新生儿，其中4名在住院后发展为NEC，3名为LOS，其余17名为对照组。从出生后的第一天开始收集粪便标本，纵向收集直至患儿出院，共收集192个粪便样本。扩增每个粪便样品的16s rRNA基因的细菌V3~V4区域并测序；后续分析包括：OTU聚类，各分类水平注释，多样性分析和多级物种判别分析。
-      \item[结果] 从出生后第14天开始，肠道微生物群定植模式开始在NEC，LOS及其匹配的对照组之间出现差异。迟发性脓毒症婴儿的肠道微生物群最少（Shannon指数= 1.66），对照组保持最多样化（Shannon指数= 0.88，p = 0.01）。潜在致病菌属肠球菌（20.86％）和葡萄球菌（8.67％）在NEC患者中显着，而在LOS组中克雷伯氏菌（42.15％）。NEC和对照组均较LOS组（3.66％）含有更多的乳球菌（分别为7.98％和13.76％）。
+      \item[目的] 探究早产儿坏死性小肠结肠炎(NEC)和迟发型脓毒血症（LOS）的发生发展与早产儿出生后肠道菌群定植模式的相关性。
+      \item[方法] 入组24名早产新生儿，其中4名在住院后发展为NEC，3名为LOS，其余17名为无肠道感染对照组。从出生后的第一天开始收集粪便标本，纵向收集直至患儿出院，共收集192个粪便样本。扩增每个粪便样品的16s rRNA基因的细菌V3~V4区域并测序；后续分析包括：OTU聚类，各分类水平注释，多样性分析和多级物种判别分析。
+      \item[结果] 从出生后第14天开始，肠道微生物群定植模式开始在NEC，LOS及其匹配的对照组之间出现差异。迟发型脓毒症早产儿的肠道微生物群多样性最低（Shannon指数= 1.66），对照组保持最多样化（Shannon指数= 0.88，p = 0.01）。潜在致病菌属肠球菌（20.86％）、葡萄球菌（8.67％）和链球菌（8.58\%）的相对丰度在NEC患者中最高（p = 0.034），而在LOS组中为克雷伯氏菌（42.15％，p = 0.023）。对照组较NEC和LOS组含有更多的乳球菌（分别为13.76\%, 7.98\%和3.66\%，p = 0.028）
       \item[结论] 肠道菌群定植失调与早产儿NEC和LOS发生和发展相关，尤其是潜在致病菌属，包括链球菌、葡萄球菌和克雷伯菌的相对丰度增加与上述疾病发展相关。
     \end{description}
 
-%  \textbf{儿科炎症性疾病与肠道菌群紊乱}
-%    \begin{description}
-%      \item[目的]
-%      \item[方法]
-%      \item[结果]
-%      \item[结论]
-%    \end{description}
-  \textbf{肠道菌群研究中粪便样品取样与保存方法}
+  \textbf{第二部分：儿科肠道炎症性疾病与肠道菌群研究}
     \begin{description}
-        \item[摘要] 随着高通量测序技术（next generation sequencing, NGS ）的飞速发展，肠道菌群得以被更深入的研究。肠道内容物和粪便样品有着取样便捷、代表性强等特点，因此常被作为肠道菌群研究中的主要研究对象；而样品的收集和保存方法很大程度上影响其内部菌群结构和多样性，从而决定了后续测序分析的准确性。该文将就现今常用的肠道菌群研究中粪便样品的取样和保存方法进行综述。
-        \item[关键词] 肠道菌群；高通量测序；肠道内容物；粪便；取样
-        \item[基金项目] 国家自然科学基金（项目编号81771630）
+      \item[目的] 比较先天性巨结肠(HD)、先天性巨结肠小肠结肠炎(HAEC)、坏死型小肠结肠炎(NEC)和炎症性肠病(IBD)肠道菌群的异同。
+      \item[方法] 入选HAEC患儿4例，HD患儿7例，NEC患儿6例，IBD患儿7例，共24例。采集其横向粪便标本，共58个，其中HAEC标本14个，HD标本22个，NEC标本15个，IBD标本7个。扩增每个粪便样品的16s rRNA基因的细菌V3~V4区域并测序；后续分析包括：OTU聚类，各分类水平注释，多样性分析和多级物种判别分析。
+      \item[结果] 三组肠道感染患儿，包括HAEC、NEC和IBD的肠道菌群$\alpha$多样性相仿，且均低于巨结肠患儿和同龄健康儿童；另外，菌群内部组成和丰度（$\beta$多样性）在四组患儿间未见显著性差异（PC1 = 32.07\%, PC2 = 24.84\%）。从分类进化角度，肠炎患儿菌群在门水平上的组成大致类似；但具体到属水平则各不相同：HAEC患儿以肠球菌为优势菌属（38.02\%，p = 0.01），总体组成成分与HD类似；IBD患儿各菌属丰度大致相当；NEC患儿肠道菌群构成则较为简单，且以克雷博菌属为主导菌。另外，IBD组可见较高水平的韦荣氏球菌（14\%, p = 0.02），后者与肠道黏膜上皮炎症反映密切相关。
+      \item[结论] 肠道微生态失衡包括多样性降低、格兰阴性菌丰度增加，其对于肠道炎症状态的影响具有一定共性，这也可能是三种肠炎有着类似临床表现和病理特征的内在关联因素。
     \end{description}
 \end{abstract}
 
 \begin{englishabstract}
-  \textbf{Patterened Intestinal Microbiota in Necrotizing Enterocolitis}
+  \textbf{Part I. Patterened Intestinal Microbiota in Preterm Necrotizing Enterocolitis and Late-Onset Sepsis}
     \begin{description}
-      \item[AIM] To profile postpartum pattern progression of intestinal microbiome in these two diseases, with the aim of understanding their etiologic microbiota profiles from a dynamic perspective.
+      \item[AIM] To profile postpartum pattern progression of intestinal microbiome in necrotizing enterocolitis and late-onset sepsis in preterm infants, with the aim of understanding their etiologic microbiota profiles from a dynamic perspective.
       \item[METHODS] 24 preterm newborns were enrolled, among whom four subsequently developed NEC, three LOS, and the remaining 17 were healthy controls. Starting from the first stool after birth and continuing till discharge, 192 longitudinal fecal samples were prospectively collected from all patients. Bacterial V3~V4 region of 16s rDNA from each stool sample were amplified and sequenced.
-      \item[RESULTS] The postpartum gut microbiota colonization started to diverge among NEC, LOS and their matched control groups, from the second week after birth.  Late-onset sepsis infants held the least diversified gut microbiota (Shannon index=1.66), with the control group held the most diversified one (Shannon index=0.88, p=0.01). Potentially pathogenic genus Enterococcus (20.86\%) and Staphylococcus (8.67\%) were prominent in NEC patients and Klebsiella (42.15\%) in LOS group. Both NEC and control groups addressed higher proportion of Lactococcus (7.98\% and 13.76\%, respectively) than the control group (3.66\%).
-      \item[CONCLUSIONS] After-birth colonization pattern of gut microbiome might predispose preterm newborns to necrotizing enterocolitis or late-onset sepsis, in which reduced diversity of the whole microbiota community and potentially pathogenic genus could have played an essential role in disease progression. Still, more studies are needed to identify etiological strains, underlying mechanisms and correspondent microbial patterns.
+      \item[RESULTS] The postpartum gut microbiota colonization started to diverge among NEC, LOS and their matched control groups, from the second week after birth.  Late-onset sepsis infants held the least diversified gut microbiota (Shannon index=1.66), with the control group held the most diversified one (Shannon index=0.88, p=0.01). The relative abundance of the potential pathogenic genus Enterococcus (20.86\%), Staphylococcus (8.67\%) and Streptococcus (8.58\%) were the highest in NEC patients (p = 0.034), while Klebsiella as the most abundant genus in the LOS group (42.15\%, p = 0.023). The control group contained more Lactococcus than the NEC and LOS groups (13.76\%, 7.98\% and 3.66\%, respectively, p = 0.028)
+      \item[CONCLUSIONS] Post partum colonization pattern of gut microbiome might predispose preterm newborns to necrotizing enterocolitis or late-onset sepsis, in which reduced diversity of the whole microbiota community and potentially pathogenic genus could have played an essential role in disease progression. Still, more studies are needed to identify etiological strains, underlying mechanisms and correspondent microbial patterns.
     \end{description}
 
-%  \textbf{Pediatric Enterocolitis in Association with Intestinal Microbiota}
-%    \begin{description}
-%      \item[AIM] 详细内容
-%      \item[METHODS] 详细内容
-%      \item[RESULTS] 详细内容
-%      \item[CONCLUSIONS] 详细内容 \ldots
-%    \end{description}
-
-  \textbf{Sampling and Storage Methods of Fecal samples in human intestinal microbiome study}
+  \textbf{Part II. Pediatric Enterocolitis in Association with Intestinal Microbiota}
     \begin{description}
-      \item[Abstract]With the rapid development of high-throughput sequencing (NGS) technique, intestinal microbiome could be studied more deeply. Intestinal contents and fecal samples have the characteristics of convenient sampling and strong representation, so they are often used as the main research objects in the study of intestinal microbiota. The method of collecting and storage of samples are very important to affect the internal flora structure and diversity, which determines the accuracy of subsequent sequencing analysis. This review summarizes the sampling and storage methods of fecal samples in the study of intestinal microbiome.
-      \item[Key Words]Intestinal Microbiome；High Throughput DNA Sequencing；Intestinal Contents；Feces；Specimen Collection
-      \item[Fundings]National Natural Science Foundation of China (Project No. 81771630)
+      \item[AIM] To compare the similarities and differences of intestinal microbiota in Hirschsprung's disease (HD), Hirschsprung-associated enterocolitis (HAEC), necrotizing enterocolitis (NEC) and inflammatory bowel disease (IBD).
+      \item[METHODS] 24 patients were enrolled, among them four were HAEC patients, seven were HD patients, six were NEC patients, and severn were IBD. A total of 58 fecal samples were collected, including 14 HAEC samples, 22 HD samples, 15 NEC samples, and 7 IBD samples. The bacterial V3~V4 region of the 16s rRNA gene from each fecal sample was amplified and sequenced; subsequent analysis included: OTU clustering, annotation of each classification level, diversity analysis and multi-level species discriminant analysis.
+      \item[RESULTS] The intestinal microbiota from three groups of enterocolitis are similar in diversity and lower than that of children with HD and healthy children of the same age. In addition, the internal composition and abundance of the microbiome ($\beta$ diversity) are similar among four groups (PC1 = 32.07\%, PC2 = 24.84\%). From the perspective of taxonomic evolution, the compositions of the gut microbiota of children with enteritis are similar at the phylum level; however, on the genus level, compositional differences were observed: \textit{Enterococcus} were dominant among the HAEC patients (38.02\%, p = 0.01), and it is similar to the HD patients; the abundance of each genus from the IBD patients is roughly equal; the components of intestinal microbiota from the NEC cases are relatively simpler, and Klebsiella is the dominant bacteria. In addition, higher levels of Veillonella (14\%, p = 0.02) are seen in the IBD group, which is closely associated with intestinal mucosal epithelial inflammation.
+      \item[CONCLUSIONS] Intestinal microecological dysbosis, including reduced diversity and increased abundance of Gram-negative bacteria, might contributes to the certain commonality during the intestinal inflammatory state. This may also be an intrinsic correlative factor of three enteritis with similar clinical manifestations and pathological features.
     \end{description}
-
 
 \end{englishabstract}
