--- a/tex/app_table.tex
+++ b/tex/app_table.tex
@@ -45,3 +45,43 @@ Control & Control17 & Male & 33 & 1720 & — & — & — & — & 22 \\
 \end{tabular}
 \label{tab:2demograph}
 \end{sidewaystable}
+
+%四组肠炎比较
+\begin{sidewaystable}[h]
+  \tiny
+\bicaption[HAEC，HD，NEC和IBD组每名患儿基本情况]
+  {HAEC，HD，NEC和IBD组每名患儿基本情况}
+  {Demographic characteristics of every patient from HAEC, HD, NEC and IBD groups.}% title name of the table
+\centering % centering table
+\begin{tabular}{ccccccc} % creating 10 columns
+\hline\hline % inserting double-line
+Group & Patient ID & Gender & Age (days) & Gestation Age (weeks) & Length of Stay (days) & PN \\ %[0.05ex]
+\hline % inserts single-line
+HAEC & HAECa & male & 215 & 33 & 4 & FALSE \\
+HAEC & HAECb & female & 1162 & 37 & 14 & TRUE \\
+HAEC & HAECc & male & 134 & NA & 12 & TRUE \\
+HAEC & HAECd & male & 147 & 37 & 15 & FALSE \\
+HD & HDa & male & 79 & 39 & 29 & TRUE \\
+HD & HDb & male & 180 & 38 & 10 & FALSE \\
+HD & HDc & male & 237 & 41 & 11 & FALSE \\
+HD & HDd & female & 298 & 37 & 25 & TRUE \\
+HD & HDe & male & 111 & 37 & 16 & FALSE \\
+HD & HDf & male & 368 & NA & 16 & TRUE \\
+HD & HDh & male & 222 & 37 & 18 & FALSE \\
+NEC & NECa & male & 111 & 34 & 33 & FALSE \\
+NEC & NECb & female & 62 & 34 & 50 & TRUE \\
+NEC & NECc & male & 166 & 37 & 15 & FALSE \\
+NEC & NECd & male & 220 & 30 & 10 & FALSE \\
+NEC & NECe & male & 67 & 31 & 73 & FALSE \\
+NEC & NECf & female & 66 & 29 & 95 & FALSE \\
+IBD & IBDa & male & 4380 & 37 & NA & FALSE \\
+IBD & IBDb & male & 4045 & 37 & NA & FALSE \\
+IBD & IBDc & male & 5110 & 37 & NA & FALSE \\
+IBD & IBDd & male & 1825 & 37 & NA & FALSE \\
+IBD & IBDe & male & 3495 & 37 & NA & FALSE \\
+IBD & IBDf & female & 4931 & 37 & 10 & FALSE \\
+IBD & IBDm & female & 372 & 37 & 27 & FALSE \\
+\hline % inserts single-line
+\end{tabular}
+\label{tab:3demograph}
+\end{sidewaystable}
