--- a/tex/chap2nec.tex
+++ b/tex/chap2nec.tex
@@ -11,7 +11,7 @@
 \label{chap:nec}
 
 \section{引言}
-肠道菌群紊乱常常见于多种早产并发症，包括坏死性小肠结肠炎（Necrotizing Enterocolitis, NEC）和迟发性败血症（Late-Onset Sepsis，LOS）。前者是一种以小肠黏膜缺血性坏死为特征的疾病，与重度炎症、肠道产气菌侵袭、产气侵入肠道壁和门静脉系统相关\cite{neu2011necrotizing}，在早产儿发病率为4～7\% \cite{rees2010nationa}；起病快，进展凶险，严重者可致死。近年来有研究发现肠道菌群紊乱存在于NEC发病期间。后者是一种在出生后72小时后发生的败血症，其是早产儿和极低出生体重的死亡主要原因之一\cite{stoll2002late}。近期，有报道LOS患儿肠道内菌群多样性下降\cite{mai2013distortions}，致病菌包括肠球菌（\textit{Enterococcus}）丰度增加\cite{stewart2017longitudinal}，提示肠道菌群紊乱与LOS发病相关。本研究拟前瞻性观察早产儿出生后总想肠道菌群变化规律，以探究肠道菌群不同变化轨迹与NEC和LOS发生发展的相关规律，为明确其发病机制并早期预防、诊断和治疗提供依据。
+肠道菌群紊乱常常见于多种早产并发症，包括坏死性小肠结肠炎（Necrotizing Enterocolitis, NEC）和迟发型脓毒血症（Late-Onset Sepsis，LOS）。前者是一种以小肠黏膜缺血性坏死为特征的疾病，与重度炎症、肠道产气菌侵袭、产气侵入肠道壁和门静脉系统相关\cite{neu2011necrotizing}，在早产儿发病率为4～7\% \cite{rees2010nationa}；起病快，进展凶险，严重者可致死。近年来有研究发现肠道菌群紊乱存在于NEC发病期间。LOS是一种在出生后72小时后发生的脓毒血症，是早产儿和极低出生体重儿的死亡主要原因之一\cite{stoll2002late}。近期，有报道LOS患儿肠道内菌群多样性下降\cite{mai2013distortions}，致病菌包括肠球菌（\textit{Enterococcus}）丰度增加\cite{stewart2017longitudinal}，提示肠道菌群紊乱与LOS发病相关。本研究拟前瞻性观察早产儿出生后纵向肠道菌群变化规律，以探究肠道菌群不同变化轨迹与NEC和LOS发生发展的相关规律，为明确其发病机制并早期预防、诊断和治疗提供依据。
 
 \section{材料与方法}
   \subsection{伦理}
@@ -22,15 +22,15 @@
       \paragraph{入组标准}
       胎龄小于34周，出生体重不低于950g的早产儿。
       \paragraph{排除标准}
-      1）新生儿早发型败血症，2）肝脏疾病，3）肾功能损害（Cr>88μM），4）存在先天肠道发育异常，5）需要进行大型胸部或腹部手术（男性包皮环切术或动脉导管结扎除外），6）预计使用肠外营养（Parental Nutrition， PN）支持供应超过50%的每日热卡摄入量，且时间超过4天，7）静脉注射抗生素（除常规使用头孢噻肟、哌拉西他唑和甲硝唑），8）有口服抗生素史，9）有血便史，10）日龄大于五天者。
+      1）新生儿早发型脓毒血症，2）肝脏疾病，3）肾功能损害（Cr>88μM），4）存在先天肠道发育异常，5）需要进行大型胸部或腹部手术（男性包皮环切术或动脉导管结扎除外），6）预计使用肠外营养（Parental Nutrition， PN）支持供应超过50\%的每日热卡摄入量，且时间超过4天，7）静脉注射抗生素（除常规使用头孢噻肟、哌拉西他唑和甲硝唑），8）有口服抗生素史，9）有血便史，10）日龄大于五天者。
   \subsection{诊断标准}
   评估并记录入组患儿一般情况，临床症状体征、实验室检查及影像学检查等，观察其是否发生NEC（II期和III期）或LOS。
 
   坏死性小肠结肠炎NEC诊断和分级根据“改良Bell分级标准”\cite{bell1978neonatal}：II期，伴有放射性肠扩张，肠梗阻，肠道积气和/或腹部压痛，和/或轻度代谢性酸中毒，肠鸣音减弱，血小板减少症。
 
-  迟发型败血症LOS确诊标准：如果患儿在出生后72小时后，由至少两位新生儿科医生独立检查确认脓毒症体征/症状，血培养或其他体液培养阳性或可疑阳性，并接受过高级别抗生素治疗（例：美罗培南等），则诊断为LOS。
+  迟发型脓毒血症LOS确诊标准：如果患儿在出生后72小时后，由至少两位新生儿科医生独立检查确认脓毒症体征/症状，血培养或其他体液培养阳性或可疑阳性，并接受过高级别抗生素治疗（例：美罗培南等），则诊断为LOS。
 
-  住院期间无感染性并发症或败血症、无NEC的患儿纳入对照组。
+  住院期间无感染性并发症或脓毒血症、无NEC的患儿纳入对照组。
 
   \subsection{主要实验室试剂及仪器}
   \label{主要实验室试剂及仪器}
@@ -104,8 +104,8 @@
       \item 将通过质控的DNA样本置于-80°C冰箱中上海美吉生物医药科技有限公司进行后续扩增。
     \end{enumerate}
 
-  \subsection{总DNA 16s rDNA V3-V4可变区片段的扩增}
-  \label{总DNA 16s rDNA V3-V4可变区片段的扩增}
+  \subsection{总DNA 16s rRNA V3-V4可变区片段的扩增}
+  \label{总DNA 16s rRNA V3-V4可变区片段的扩增}
   扩增区域为16 s rDNA V3-V4可变区，合成带有Illumina官方接头序列barcode的特异引物。扩增模版为上述提取的粪便样品总DNA。用338F (5’-ACTCCTACGGGAGGCAGCAG-3’)和806R (5’-GGACTACHVGGGTWTCTAAT-3’) 引物对V3-V4可变区进行PCR扩增，扩增程序为：95℃ 预变性3min，27个循环（95℃ 变性30s，55℃ 退火30s, 72℃ 延伸30s），最后72℃延伸 10min （PCR仪：ABI GeneAmp\textsuperscript{\textregistered} 9700型）。扩增体系为20ul，4ul 5*FastPfu 缓冲液，2ul 2.5mM dNTPs， 0.8ul 引物（5uM）， 0.4ulFastPfu 聚合酶；10ng DNA模板。PCR 采用TransGen AP221-02：TransStart Fastpfu DNA Polymerase；PCR仪为ABI GeneAmp\textsuperscript{\textregistered} 9700型。
   扩增质控：为保证后续数据分析的准确性及可靠性，全部样品均按照正式实验条件进行，尽可能使用低循环数扩增，每例样本重复扩增3次，使用2\%琼脂糖凝胶回收PCR产物，利用AxyPrep DNA Gel Extraction Kit (Axygen Biosciences, Union City, CA, USA) 进行纯化，Tris-HCl洗脱，2\%琼脂糖电泳检测。为保证后续数据分析的准确性及可靠性，需满足两个条件，1) 尽可能使用低循环数扩增；2) 保证每个样本扩增的循环数一致。随机选取具有代表性的样本进行预实验，确保在最低循环数中使绝大多数样本能够扩增出浓度合适的产物。
   \subsection{荧光定量}
@@ -185,7 +185,7 @@
 
     domain（域），kingdom（界），phylum（门），class（纲），order（目），family（科），genus（属）比对\href{Silva数据库}{http://www.arb-silva.de}，统计各样本的群落组成，默认置信度阈值为70\%。
 
-    多级物种判别分析（LEfSe分析，Linear discriminant analysis Effect Size）是一种用于发掘高维度生物标示和揭示基因组特征的软件。包括基因、代谢和分类，用于区别两个或以上生物条件（或是生物类群）。该分析软件先采用non-parametric factorial Kruskao-Wallis sum-rank test检测具有显著丰度差异特征，并找到与丰度有显著性差异的类群。最后，采用线性判别分析（LDA, Linear Discriminant Analysis）来估算每个物种丰度对于差异效果影响的大小。在Cladogram中，不同颜色的节点表示在对应组别中显著富集，且对组间差异存在显著影响的微生物分类群；浅黄色节点表示在不同分组中均无显著差异，或对组间差异无显著影响的微生物类群。
+    多级物种判别分析（LEfSe分析，Linear discriminant analysis Effect Size）是一种用于发掘高维度生物标示和揭示基因组特征的软件。包括基因、代谢和分类，用于区别两个或以上生物条件（或是生物类群）。该分析软件先采用non-parametric factorial Kruskal-Wallis sum-rank test检测具有显著丰度差异特征，并找到与丰度有显著性差异的类群。最后，采用线性判别分析（LDA, Linear Discriminant Analysis）来估算每个物种丰度对于差异效果影响的大小。在Cladogram中，不同颜色的节点表示在对应组别中显著富集，且对组间差异存在显著影响的微生物分类群；浅黄色节点表示在不同分组中均无显著差异，或对组间差异无显著影响的微生物类群。
 
     \subsubsection{多样性分析}
     多样性指数用来表述一个群落的多样性的统计量，在生物学中可以被用来描述某中环境下的生物多样性。多样性指数常备用来估算任何一个群落，每个成员都属于一个独特的群体或者物种。往往，多样指数的估计量存在一定的偏差，因此相似的值之间往往不能直接比较：本课题主要选择两个空间尺度来比较各分组间和样本间的微生物多样型——$\alpha$多样性和$\beta$多样性。
@@ -230,50 +230,51 @@
       \item 出生后早期（Early Post Partum， EPP）：出生后3天内；
       \item 早发病前期（Early Pre-onset， EPO）： 出生后3天至发病前4天；
       \item 晚发病前期（Late Pre-onset， LPO）： 发病前4天内；
-      \item 疾病早期（Early Disease， ED）：前1\/3病程；
-      \item 疾病中期（Middle Disease， MD）：中1\/3病程；
-      \item 疾病晚期（Late Disease， LD）：后1\/3病程；
+      \item 疾病早期（Early Disease， ED）：前1/3病程；
+      \item 疾病中期（Middle Disease， MD）：中1/3病程；
+      \item 疾病晚期（Late Disease， LD）：后1/3病程；
       \item 疾病后期（Post Disease， PD）：疾病痊愈至出院期间；
     \end{enumerate}
     \subsubsection{建模方法}
-    分别使用ZIBR (Zero-Inflated Beta Random Effect model)模型和LME(Linear Mixed-Effects Models)模型进行建模，寻找组间随时间变化最显著的菌群。使用zibr和lme R包。
+    分别使用ZIBR (Zero-Inflated Beta Random Effect model)模型和LME(Linear Mixed-Effects Models)模型进行建模，寻找组间随时间变化最显著的菌群。使用zibr和lme R包（附录\ref{app:archive}）。
 
 
 \section{结果}
-  \subsection{患者基本情况}
-  2013年7月至2014年12月，共有1148名早产儿入院，其中5名在此期间诊断为坏死性小肠结肠炎（NEC）；发病率4.4%， 与总体发病率一致{rees2010national}。 在所有早产儿中，有130名符合我们的研究标准，并向其收集了1698份粪便标本。
+    \subsection{患者基本情况}
+    2013年7月至2014年12月，共有1148名早产儿入院，其中5名在此期间诊断为坏死性小肠结肠炎（NEC）；发病率4.4\%， 与总体发病率一致\cite{rees2010national}。 在所有早产儿中，有130名符合我们的研究标准，并向其收集了1698份粪便标本。
 
-  本研究最终选择24个有足够样品数量（大于6个）的早产儿，包括4名坏死性小肠结肠炎（NEC）患儿（2个IIA期和2个IIB期），3个迟发型败血症LOS和17个匹配对照（表S1）；样本共192个，其中NEC标本45个，LOS标本44个，对照组标本103个，并进行16s rRNA 基因测序。
+    本研究最终选择24个有足够样品数量（大于6个）的早产儿，包括4名坏死性小肠结肠炎（NEC）患儿（2个IIA期和2个IIB期），3个迟发型脓毒血症LOS和17个匹配对照（表S1）；样本共192个，其中NEC标本45个，LOS标本44个，对照组标本103个，并进行16s rRNA 基因测序。
 
-  本研究中， 所有早产儿的平均胎龄为30.5周（28至33周），平均出生体重为1440克（945克至1950克）。 NEC组有3名女婴和1名男婴，LOS组有2名女婴和1名男婴，对照组有9名女婴和8名男婴。所有患儿均通过剖宫产分娩，并以早产儿配方奶喂养。 NEC的平均发病时间为出生后16天（范围：11至19天），确诊为LOS的平均生命日为12天（图\ref{fig:2dol}）。三组的人口统计学比较（表\ref{tab:necdemographic}）显示，在胎龄，出生体重和性别百分比方面未见显著差异。
+    本研究中， 所有早产儿的平均胎龄为30.5周（28至33周），平均出生体重为1440克（945克至1950克）。 NEC组有3名女婴和1名男婴，LOS组有2名女婴和1名男婴，对照组有9名女婴和8名男婴。所有患儿均通过剖宫产分娩，并以早产儿配方奶喂养。 NEC的平均发病时间为出生后第16天（范围：11至19天），确诊为LOS的平均日龄为16天（图\ref{fig:2dol}）。三组的人口统计学比较（表\ref{tab:necdemographic}）显示，在胎龄，出生体重和性别百分比方面未见显著差异。
 
-  一旦怀疑发生NEC，患儿会立即得到支持性护理和抗生素治疗——支持性护理包括停止肠内喂养、肠道休息，开始全肠外营养（TPN），补液，纠正代谢性酸中毒，肠道休息。在上海儿童医学中心新生儿重症监护病房，用于预防早产儿出生后败血症的抗生素组合为哌拉西林 - 他唑巴坦，头孢噻肟和甲硝唑。分别在治疗28天和15天后，两名NEC患儿情况好转并重新开始肠内喂养。一名婴儿在家人同意终止治疗并拒绝手术干预后死亡（表\ref{tab:2demograph}）。
+    \begin{table}[!hpb]
+      \centering
+      \bicaption[NEC, LOS和对照组早产儿一般情况]
+        {早产儿患者一般情况\footnotemark[1]}
+        {Demographic characteristics of Preterm NEC, LOS and control groups.}
+      \label{tab:necdemographic}
+      \begin{tabular}{lp{1.8cm}p{1.8cm}p{1.8cm}p{2cm}c}
+        \toprule
+           & \textbf{NEC (N=4)} & \textbf{LOS (N=3)} & \textbf{Control (N=17)} & \textbf{Statistical Test} & \textit{p value} \\ \midrule
+          \textbf{胎龄(周)} & 29(29-30) & 30(29-31) & 31(28-33) & Kruskal-Wallis test & 0.074 \\
+          \textbf{出生体重(克)} & 1416.3 (773.4-2149.1) & 1141.7 (633.4-1649.9) & 1527.4 (1391.6-1663.1) & Kruskal-Wallis test & 0.111 \\
+          \textbf{性别} &  &  &  & Fisher's exact test & 0.82 \\
+          \multicolumn{1}{r}{女} & 3(75\%) & 2(67\%) & 9(53\%) &  & \\
+          \multicolumn{1}{r}{男} & 1(25\%) & 1(33\%) & 8(47\%) &  & \\
+          \textbf{诊断时年龄(天)} & 16(11-19) & 16(10-22) & — & Wilcoxon rank-sum test & 0.629 \\
+          \textbf{住院时长(天)} & 54.3 (13.5-95.0) & 60.0 (24.8-95.2) & 32.9 (26.3-39.5) & Kruskal-Wallis test & 0.046 \\
+          \textbf{标本总数} & 45 & 44 & 103 & — & — \\ \bottomrule
+      \end{tabular}
+    \end{table}
+    \footnotetext[1]{NEC、LOS和对照组在入院时，胎龄、出生体重、年龄和性别无统计学差异。三组住院时常具有显著性差异（p = 0.046），这符合我们的预期，因为NEC和LOS患儿往往需要更长时间恢复，因此住院时间相对更长；比较NEC和LOS组住院时长未见明显统计学差异。胎龄=平均值（下限-下限），出生体重=平均值（95\%置信区间），诊断时年龄=平均值（下限-下限），性别=人数（占本组的百分比），住院时长=平均值（95\%置信区间）
+    }
 
-  根据细菌血培养的阳性结果，来自LOS组的一名患儿被诊断出患有肺炎克雷伯菌菌血症，并且给予美罗培南21天；第二名患儿被诊断患有肺炎克雷伯氏菌和铜绿假单胞菌菌血症并给予美罗培南38天。第三名患儿被诊断为肺炎克雷伯菌菌血症、重症肺炎且对头孢噻肟耐药，因此给予美罗培南13天。
 
-  住院前和住院期间所有患者均未接受益生菌处方。
+    一旦怀疑发生NEC，患儿会立即得到支持性护理和抗生素治疗——支持性护理包括停止肠内喂养、肠道休息，开始全肠外营养（TPN），补液，纠正代谢性酸中毒，肠道休息。在上海儿童医学中心新生儿重症监护病房，用于预防早产儿出生后脓毒血症的抗生素组合为哌拉西林 - 他唑巴坦，头孢噻肟和甲硝唑。分别在治疗28天和15天后，两名NEC患儿情况好转并重新开始肠内喂养。一名婴儿在家人同意终止治疗并拒绝手术干预后死亡（表\ref{tab:2demograph}）。
 
-  \begin{table}[!hpb]
-    \centering
-    \bicaption[NEC, LOS和对照组早产儿一般情况]
-      {早产儿患者一般情况\footnotemark[1]}
-      {Demographic characteristics of Preterm NEC, LOS and control groups.}
-    \label{tab:necdemographic}
-    \begin{tabular}{lp{1.8cm}p{1.8cm}p{1.8cm}p{2cm}c}
-      \toprule
-         & \textbf{NEC (N=3)} & \textbf{LOS (N=4)} & \textbf{Control (N=17)} & \textbf{Statistical Test} & \textit{p value} \\ \midrule
-        \textbf{胎龄(周)} & 29(29-30) & 30(29-31) & 31(28-33) & Kruskal-Wallis test & 0.074 \\
-        \textbf{出生体重(克)} & 1416.3 (773.4-2149.1) & 1141.7 (633.4-1649.9) & 1527.4 (1391.6-1663.1) & Kruskal-Wallis test & 0.111 \\
-        \textbf{性别} &  &  &  & Fisher's exact test & 0.82 \\
-        \multicolumn{1}{r}{女} & 3(75\%) & 2(67\%) & 9(53\%) &  & \\
-        \multicolumn{1}{r}{男} & 1(25\%) & 1(33\%) & 8(47\%) &  & \\
-        \textbf{诊断时年龄(天)} & 16(11-19) & 16(10-22) & — & Wilcoxon rank-sum test & 0.629 \\
-        \textbf{住院时长(天)} & 54.3 (13.5-95.0) & 60.0 (24.8-95.2) & 32.9 (26.3-39.5) & Kruskal-Wallis test & 0.046 \\
-        \textbf{标本总数} & 46 & 42 & 103 & — & — \\ \bottomrule
-    \end{tabular}
-  \end{table}
-  \footnotetext[1]{NEC、LOS和对照组在入院时，胎龄、出生体重、年龄和性别无统计学差异。三组住院时常具有显著性差异（p = 0.046），这符合我们的预期，因为NEC和LOS患儿往往需要更长时间恢复，因此住院时间相对更长；比较NEC和LOS组住院时长未见明显统计学差异。胎龄=平均值（下限-下限），出生体重=平均值（95\%置信区间），诊断时年龄=平均值（下限-下限），性别=人数（占本组的百分比），住院时长=平均值（95\%置信区间）
-  }
+    根据细菌血培养的阳性结果，来自LOS组的一名患儿被诊断出患有肺炎克雷伯菌菌血症，并且给予美罗培南21天；第二名患儿被诊断患有肺炎克雷伯氏菌和铜绿假单胞菌菌血症并给予美罗培南38天。第三名患儿被诊断为肺炎克雷伯菌菌血症、重症肺炎且对头孢噻肟耐药，因此给予美罗培南13天。
+
+    住院前和住院期间所有患者均未接受益生菌处方。
 
   \subsection{样本及测序信息}
   入选NEC患儿4例，LOS患儿3例， 对照组患儿17例。采集其纵向粪便标本，共192个，其中NEC标本47个，LOS标本44个，对照组标本101个（图\ref{fig:2scheme}）。其他临床资料见表\ref{tab:necdemographic}。
@@ -303,7 +304,7 @@
       \end{figure}
 
     \subsubsection{纲（class）水平}
-    在纲水平，三组患儿肠道内以$\gamma$-变形菌纲（\textit{$\gamma$-Proteobacteria}）、杆菌纲(\textit{Bacilli})、梭菌纲（\textit{Clostridia}）和放线菌纲（\textit{Actinobacteria}）为主导。$\gamma$-变形菌纲的丰度在LOS组最高（59.57\%），对照组次之（50.51\%），NEC组最低（38.06\%），三组丰度显著不同（p = 0.013）；厚壁菌门(\textit{Bacilli})丰度在组最高NEC（53.56\%），对照组次之（39.19\%），LOS组最低（32.17\%），且三组间丰度呈显著性差异（p = 0.015）；梭菌纲（\textit{Clostridia}）丰度在LOS组最高（6.54\%），NEC组次之（5.36\%），对照组最低（4.86\%），三组丰度差异在统计学上不显著（p = 0.236）；放线菌纲（\textit{Clostridia}）的丰度在对照组最高（3.40\%），在LOS和NEC丰度相似（前者0.63\%，后者1.01\%，组间差异不显著（p = 0.76）），三组间丰度差异显著（p = 0.001）（图\ref{fig:2class}）（图\ref{fig:2class}）。
+    在纲水平，三组患儿肠道内以$\gamma$-变形菌纲（\textit{$\gamma$-Proteobacteria}）、杆菌纲(\textit{Bacilli})、梭菌纲（\textit{Clostridia}）和放线菌纲（\textit{Actinobacteria}）为主导。$\gamma$-变形菌纲的丰度在LOS组最高（59.57\%），对照组次之（50.51\%），NEC组最低（38.06\%），三组丰度显著不同（p = 0.013）；杆菌纲(\textit{Bacilli})丰度在组最高NEC（53.56\%），对照组次之（39.19\%），LOS组最低（32.17\%），且三组间丰度呈显著性差异（p = 0.015）；梭菌纲（\textit{Clostridia}）丰度在LOS组最高（6.54\%），NEC组次之（5.36\%），对照组最低（4.86\%），三组丰度差异在统计学上不显著（p = 0.236）；放线菌纲（\textit{Clostridia}）的丰度在对照组最高（3.40\%），在LOS和NEC丰度相似（前者0.63\%，后者1.01\%，组间差异不显著（p = 0.76）），三组间丰度差异显著（p = 0.001）（图\ref{fig:2class}）（图\ref{fig:2class}）。
       %纲水平配图
       \begin{figure}[!htp]
         \centering
@@ -327,23 +328,23 @@
       \end{figure}
 
     \subsubsection{科（family）水平}
-    在科水平，三组患儿肠道内以肠杆菌科（\textit{Enterobacteriaceae}）、肠球菌科(\textit{Enterococcaceae})、乳杆菌目（\textit{Lactobacillales}）、链球菌科（\textit{Streptococcaceae}）、葡萄球菌科（\textit{Staphylococcaceae}）、假单胞菌科\textit{Pseudomonadaceae}占主导。肠杆菌科丰度在LOS组最高，为57.05\%，NEC组和对照组丰度分别为34.87\%和40.89\%，三组间丰度差异显著（p = 0.011）；肠球菌科在三组的丰度分别为NEC组20.86\%，LOS组18.15\%，对照组8.46\%，三组间差异不显著（p = 0.109）；LOS组链球菌科百分比（8.70\%）显著低于NEC组（16.67\%，p = 0.）和对照组（19.07\%，p = 0.023），NEC组为16.67\%，且三组比较差异不显著（p = 0.438）；假单胞菌在三组的丰度分别为NEC组2.41\%，LOS组2.05\%，对照组5.40\%，三组间差异显著（p = 0.039）（图\ref{fig:2family}）。
+    在科水平，三组患儿肠道内以肠杆菌科（\textit{Enterobacteriaceae}）、肠球菌科(\textit{Enterococcaceae})、乳杆菌目（\textit{Lactobacillales}）、链球菌科（\textit{Streptococcaceae}）、葡萄球菌科（\textit{Staphylococcaceae}）、假单胞菌科\textit{Pseudomonadaceae}占主导。肠杆菌科丰度在LOS组最高，为57.05\%，NEC组和对照组丰度分别为34.87\%和40.89\%，三组间丰度差异显著（p = 0.011）；肠球菌科在三组的丰度分别为NEC组20.86\%，LOS组18.15\%，对照组8.46\%，三组间差异不显著（p = 0.109）；LOS组链球菌科百分比（8.70\%）显著低于NEC组（16.67\%，p = 0.038）和对照组（19.07\%，p = 0.023），NEC组为16.67\%，且三组比较差异不显著（p = 0.438）；假单胞菌在三组的丰度分别为NEC组2.41\%，LOS组2.05\%，对照组5.40\%，三组间差异显著（p = 0.039）（图\ref{fig:2family}）。
       %科水平图
       \begin{figure}[!htp]
         \centering
         \includegraphics[width=15cm]{2family.pdf}
         \bicaption[科水平上NEC, LOS和对照组患儿菌群相对丰度]
-          {纲水平上NEC, LOS和对照组患儿菌群相对丰度。}
+          {科水平上NEC, LOS和对照组患儿菌群相对丰度。}
           {Relative Abundance of Family in Intestinal Microbiota.}
         \label{fig:2family}
       \end{figure}
 
     \subsubsection{属（genus）水平}
-    属水平上，肠道菌群以克雷伯菌属（\textit{Klebsiella}）、肠球菌属（\textit{Enterococcus}）、埃希菌-志贺菌属（\textit{Escherichia-Shigella}）、乳球菌属（\textit{Lactococcus}）、链球菌属（\textit{Streptococcus}）、葡球菌属（\textit{Staphylococcus}）和假单胞菌属（\textit{Pseudomonas}）占主导。克雷伯菌在LOS组丰度最高（\%42.15），且三组丰度差异不显著（p = 0.025）；肠球菌属在三组的丰度分别为NEC组20.86\%，LOS组18.14\%，对照组8.45\%，三组间差异不显著（p = 0.105）；埃希菌-志贺菌属在三组的丰度分别为NEC组4.83\%，LOS组12.99\%，对照组10.14\%，三组丰度差异不显著（p = 0.291）；LOS组乳球菌属丰度3.65\%，显著低于对照组（3.65\%，p = 0.006）；链球菌属在三组的丰度分别为NEC组8.67\%，LOS组5.04\%，对照组5.28\%，三组间差异显著（p = 0.0.022）；LOS葡球菌属丰度0.15\%，对照组丰度为5.79\%，三组间差异在统计学上非显著（p = 0.526）；假单胞菌菌属在三组的丰度分别为NEC组2.41\%，LOS组2.05\%，对照组5.40\%，且三组间丰度存在显著性差异（p = 0.0.039）（图\ref{fig:2genus}）。
+    属水平上，肠道菌群以克雷伯菌属（\textit{Klebsiella}）、肠球菌属（\textit{Enterococcus}）、埃希菌-志贺菌属（\textit{Escherichia-Shigella}）、乳球菌属（\textit{Lactococcus}）、链球菌属（\textit{Streptococcus}）、葡球菌属（\textit{Staphylococcus}）和假单胞菌属（\textit{Pseudomonas}）占主导。克雷伯菌在LOS组丰度最高（42.15\%），且三组丰度差异显著（p = 0.025）；肠球菌属在三组的丰度分别为NEC组20.86\%，LOS组18.14\%，对照组8.45\%，三组间差异不显著（p = 0.105）；埃希菌-志贺菌属在三组的丰度分别为NEC组4.83\%，LOS组12.99\%，对照组10.14\%，三组丰度差异不显著（p = 0.291）；LOS组乳球菌属丰度3.65\%，显著低于对照组（3.65\%，p = 0.006）；链球菌属在三组的丰度分别为NEC组8.67\%，LOS组5.04\%，对照组5.28\%，三组间差异显著（p = 0.022）；LOS葡球菌属丰度0.15\%，对照组丰度为5.79\%，三组间差异在统计学上非显著（p = 0.526）；假单胞菌菌属在三组的丰度分别为NEC组2.41\%，LOS组2.05\%，对照组5.40\%，且三组间丰度存在显著性差异（p = 0.039）（图\ref{fig:2genus}）。
       %属水平配图
       \begin{figure}[!htp]
         \centering
-        \includegraphics[width=15cm]{2family.pdf}
+        \includegraphics[width=15cm]{2genus.pdf}
         \bicaption[属水平上NEC, LOS和对照组患儿菌群相对丰度]
           {属水平上NEC, LOS和对照组患儿菌群相对丰度。}
           {Relative Abundance of Genus in Intestinal Microbiota.}
@@ -358,14 +359,14 @@
           \includegraphics[width=12.5cm]{2lefse.pdf}
           \bicaption[LEfSe分析NEC, LOS和对照组患儿菌群]
             {NEC, LOS和对照组患儿菌群LEfSe进化分支图。绿色代表对照组，红色代表NEC组，蓝色代表LOS组。}
-            {Cladogram generated by software LEfSe. Green color represents the control group, red represents the NEC group, and blue represents the LOS group.}
+            {Cladogram generated by software LEfSe. Green color represents the control group. Red represents the NEC group. Blue represents the LOS group.}
           \label{fig:2lefse}
         \end{figure}
 
   %多样性
   \subsection{多样性分析和纵向分析}
     \subsubsection{NEC, LOS和对照组患儿间肠道菌群$\alpha$多样性分析}
-      基于OTU进行计算，NEC、LOS和对照组Shannon-Wienner指数分别为：1.32，1.16和1.66；三组两两比较，可知LOS组和NEC组、NEC组和对照组shannon指数无统计学差异（分别p = 0.47，p = 0.06），LOS组和对照组之间存在统计学差异（图\ref{fig:2alphadiversity:shannon}，p = 0.01）。NEC, LOS 和对照组Simpson指数分别为：0.51，0.53和0.41；三组两两比较，可知LOS组和NEC组Simpson指数无统计学差异（p = 0.77）、NEC组和对照组存在统计学差异（p = 0.03），LOS组和对照组之间存在统计学差异（图\ref{fig:2alphadiversity:simpson}，p = 0.02）。
+      基于OTU进行计算，NEC、LOS和对照组Shannon-Wienner指数分别为：1.32，1.16和1.66；三组两两比较，可知LOS组和NEC组、NEC组和对照组shannon指数均无统计学差异（分别p = 0.47，p = 0.06），LOS组和对照组之间存在统计学差异（图\ref{fig:2alphadiversity:shannon}，p = 0.01）。NEC, LOS 和对照组Simpson指数分别为：0.51，0.53和0.41；三组两两比较，可知LOS组和NEC组Simpson指数无统计学差异（p = 0.77）、NEC组和对照组存在统计学差异（p = 0.03），LOS组和对照组之间存在统计学差异（图\ref{fig:2alphadiversity:simpson}，p = 0.02）。
       %alpha多样性图
       \begin{figure}[!htp]
         \centering
@@ -414,8 +415,8 @@
           \begin{figure}[!htp]
             \centering
             \includegraphics[width=16cm]{2neccases.eps}
-            \bicaption[三名NEC患儿出生后菌群定植模式]
-              {使用weighed unifrac三名NEC患儿出生后菌群定植模式进行PCoA分析。(A)NEC patient No.1, (B)NEC patient No.2, (C)NEC patient No.3, (D)NEC patient No.4}
+            \bicaption[四名NEC患儿出生后菌群定植模式]
+              {使用weighed unifrac四名NEC患儿出生后菌群定植模式进行PCoA分析。(A)NEC patient No.1, (B)NEC patient No.2, (C)NEC patient No.3, (D)NEC patient No.4}
               {The PCoA OF post-partum colonization of each NEC patient. (A)NEC patient No.1, (B)NEC patient No.2, (C)NEC patient No.3, (D)NEC patient No.4}
             \label{fig:2neccases}
           \end{figure}
@@ -443,23 +444,23 @@
 
 
 \section{讨论}
-在人类肠道黏膜中定植了超过10万亿个微生物\cite{Ley2006}，并在方方面面影响人类的健康\cite{Sekirov2009}。肠道微环境紊乱可能扰乱人体稳态并导致各种疾病，包括肥胖\cite{Liu2017}），IBD\cite{Ley2006}，心血管疾病\cite{Wang2011}，以及精神障碍\cite{Rogers2016}等。虽然早期细菌定植对人类健康的长期影响仍然缺乏证据，但它仍然是新生儿出生后健康或某些疾病易感性的重要因素。到目前为止，少有研究关注NEC菌群的纵向发展，另外，对于新生儿晚期败血症（Late-Onset Sepsis，LOS）的菌群研究也十分有限。近期有研究发现NEC的致病菌与梭菌（\textit{Clostridium})增殖相关\cite{hosny2017updating}。然而，特定病原体尚未确定；2013年的一项研究表明，在生命的4-9天内早期的生态失调可能与NEC病理生理学密切相关\cite{morrow2013early}。因此，为在菌群层面提供对其病因学的新见解，本研究致力于探究肠道菌群定植的发展模式，而非寻找单一病原体。
+在人类肠道黏膜中定植了超过10万亿个微生物\cite{Ley2006}，并在方方面面影响人类的健康\cite{Sekirov2009}。肠道微环境紊乱可能扰乱人体稳态并导致各种疾病，包括肥胖\cite{Liu2017}），IBD\cite{Ley2006}，心血管疾病\cite{Wang2011}，以及精神障碍\cite{Rogers2016}等。虽然早期细菌定植对人类健康的长期影响仍然缺乏证据，但它仍然是新生儿出生后健康或某些疾病易感性的重要因素。到目前为止，少有研究关注NEC菌群的纵向发展，另外，对于新生儿晚期脓毒血症（Late-Onset Sepsis，LOS）的菌群研究也十分有限。近期有研究发现NEC的致病菌与梭菌（\textit{Clostridium})增殖相关\cite{hosny2017updating}。然而，特定病原体尚未确定；2013年的一项研究表明，在生命的4-9天内早期的生态失调可能与NEC病理生理学密切相关\cite{morrow2013early}。因此，为在菌群层面提供对其病因学的新见解，本研究致力于探究肠道菌群定植的发展模式，而非寻找单一病原体。
 
-本研究描述并比较了NEC和LOS早产儿及其匹配对照组出生后肠道菌群的定植模式的发展。我们对192个肠道标本中的16S rRNA基因进行了测序：包括NEC早产儿的46个标本，LOS早产儿的42个标本，以及对照组的103个标本。使用Illumina-MiSeq平台为所有样品生成了总共7,472,400个序列，并检测出一些在自然环境下较为稀有的OTU。
+本研究描述并比较了NEC和LOS早产儿及其匹配对照组出生后肠道菌群的定植模式的发展。我们对192个肠道标本中的16S rRNA基因进行了测序：包括NEC早产儿的45个标本，LOS早产儿的44个标本，以及对照组的103个标本。使用Illumina-MiSeq平台为所有样品生成了总共7,472,400个序列，并检测出一些在自然环境下较为稀有的OTU。
 
-本研究显示早产儿在NEC发病期间存在丰富的变形菌；另外，数据显示，NEC患者中的厚壁菌门丰富（59.79\%），而对照组和LOS组则为变形菌。此外，NEC患者在发病前分别在1-3天和3-7天内肠球菌和葡萄球菌的平均丰度最高，相比对照组对照组相比增加了克雷伯氏菌和葡萄球菌的丰度也更高。这些发现表明潜在的致​​病性葡萄球菌属在NEC的发病机理中可能的作用以及常规致病物种如金黄色葡萄球菌（\textit{Staphylococcus areus}）和溶血性葡萄球菌（\textit{Staphylococcus haemolyticus}）。革兰氏阴性克雷伯氏菌丰度增加的趋势表明LPS的作用，作为TRL-4的配体其能促进体外Caco-2胞吞转运作用\cite{panigrahi1996escherichia}，并增加细菌易位\cite{Deitch1987}。
+本研究显示早产儿在NEC发病期间存在丰富的变形菌；另外，数据显示，NEC患者中的厚壁菌门丰富（59.79\%），而对照组和LOS组则为变形菌。此外，NEC患者在发病前分别在1-3天和3-7天内肠球菌和葡萄球菌的平均丰度最高，相比对照组增加了克雷伯氏菌和葡萄球菌的丰度也更高。这些发现表明潜在的致​​病性葡萄球菌属在NEC的发病机理中可能的作用以及常规致病物种如金黄色葡萄球菌（\textit{Staphylococcus areus}）和溶血性葡萄球菌（\textit{Staphylococcus haemolyticus}）。革兰氏阴性克雷伯氏菌丰度增加的趋势表明LPS的作用，作为TRL-4的配体其能促进体外Caco-2胞吞转运作用\cite{panigrahi1996escherichia}，并增加细菌易位\cite{Deitch1987}。
 
-此外，LOS组中显著的肠球菌表明高级别抗生素治疗会对菌群平衡产生较大影响。尽管脓毒症中确切的微生物群组成仍有待通过动物研究来阐明\cite{Hand2012a,Sekirov2009}，脓毒症，免疫反应和微生物群破坏的机制及其后果可能有助于对败血症进展的理解，并有助于疾病的预防。在一项关于成人的临床研究中，系统性炎症反应综合症对患者肠道厌氧菌减少和肠道致病菌增加与更高的败血症并发症和更高对死亡率相关\cite{Shimizu2011}；菌群的早期异常定植也与医院相关事件相关\cite{Dutta2014}，包括机械通气和抗生素治疗\cite{Moles2013}。虽然我们相对较小的样本量仅显示特定菌属与败血症发病相关的证据有限，但脓毒症患儿的宿主 - 微生物群 - 病原体相互作用值得进一步研究。
+此外，LOS组中显著的肠球菌表明高级别抗生素治疗会对菌群平衡产生较大影响。尽管脓毒症中确切的微生物群组成仍有待通过动物研究来阐明\cite{Hand2012a,Sekirov2009}，脓毒症，免疫反应和微生物群破坏的机制及其后果可能有助于对脓毒血症进展的理解，并有助于疾病的预防。在一项关于成人的临床研究中，系统性炎症反应综合症对患者肠道厌氧菌减少和肠道致病菌增加与更高的脓毒血症并发症和更高的死亡率相关\cite{Shimizu2011}；菌群的早期异常定植也与医院相关事件相关\cite{Dutta2014}，包括机械通气和抗生素治疗\cite{Moles2013}。虽然我们相对较小的样本量仅显示特定菌属与脓毒血症发病相关的证据有限，但脓毒症患儿的宿主 - 微生物群 - 病原体相互作用值得进一步研究。
 
 另一项研究发现，早产儿肠道微生物群的定植和突然变化可能是分娩方式，喂养类型和孕龄的结果\cite{Dutta2014}。以往研究在早产儿中观察到从芽孢杆菌，$\gamma$芽孢杆菌到梭菌的一系列细菌\cite{LaRosa2014}）的先后主导作用在本研究内在包括LOS患者在内的大多数研究受试者中也观察到。本研究证实了出生后以周为时间单位的细菌定植模式，并发现每组肠道微生物群在不同组患儿间存在的显着差异。此外，本研究数据显示，在出生后第14天，NEC和对照组之间的肠道微生物群显着不同，尽管在出生后的前14天内具有相似的定植模式（图\ref{fig:2ingroupweek})，Anosim r = 0.32 p = 0.001），表明肠道微生态失调与NEC发病之间的强相关性。最后，肠道微生物群在出生后第21天至第28天的差异（图\ref{fig:2ingroupweek}，ANOSIM r = 0.27，p = 0.030）表明在NEC进展期间持续的生态失调，这与之前的横断面研究一致\cite{Wang2009}。
 
 \section{结论}
-本研究使用高通量测序描述、比较和分析早产儿出生后肠道微生物群的动态模式在NEC和LOS早产儿中的作用的研究。我们的研究结果结果支持了“肠道生态失调假说”，即肠道微生物群的“异常动态定制模式”是早产儿NEC和LOS发生进展的重要因素。具体来说：
+本研究使用高通量测序描述、比较和分析早产儿出生后肠道微生物群的动态模式在NEC和LOS早产儿中的作用的研究。我们的研究结果结果支持了“肠道生态失调假说”，即肠道微生物群的“异常动态定植模式”是早产儿NEC和LOS发生进展的重要因素。具体来说：
 
 1. 早产儿出生后第2周起，肠道菌群定植模式出现紊乱并逐渐发展为早产特定感染，NEC和LOS分别呈现不同的纵向变化规律，包括不同致病菌属的丰度增加及菌群多样性不同程度的降低，并且与临床变化相关。
 
-2. 肠道菌群失调和潜在致病菌的过度增殖与NEC和LOS进展至关重要，抗生素（特别是氨基糖苷类抗生素），可以减少早产儿肠道微生物群落的丰度和多样性。
+2. 肠道菌群失调和潜在致病菌的过度增殖与NEC和LOS进展至关重要，抗生素（特别是氨基糖苷类抗生素）会导致早产儿肠道微生物群落丰度和多样性的降低。
 
-3. NEC发病与潜在致病菌属肠球菌、葡球菌和链球菌的过度增殖相关，LOS发病与克雷伯菌过度增值相关。
+3. NEC发病与潜在致病菌属肠球菌、葡球菌和链球菌的过度增殖相关，LOS发病与克雷伯菌过度增殖相关。
 
-当然，本研究有其局限性。首先，本研究中的所有婴儿均采用配方奶进行喂养，因此无法评估人类母乳的保护作用。由于所有患儿入院时均的经验性抗生素方案，因此经验型抗生素对对肠道微生物群的影响无法完全避免。但是，三组横向及纵向比较研究方法可以最大程度找到差异影响因素。此外，NEC和LOS组样本量比较小。本研究结果仍需要在更大样本量的验证。
+当然，本研究有其局限性。首先，本研究中的所有婴儿均采用配方奶进行喂养，因此无法评估母乳的对菌群和肠道黏膜免疫屏障的保护作用。由于所有患儿入院时均采用经验性抗生素方案，因而其对肠道微生物群的影响无法完全避免。但是，三组横向及纵向比较研究方法可以最大程度找到差异影响因素。此外，NEC和LOS组样本量比较小。本研究结果仍需要更大样本量的研究以及更多机制相关研究进行验证。
