--- a/tex/id.tex
+++ b/tex/id.tex
@@ -2,18 +2,18 @@
 % !TEX program = xelatex
 % !TEX root = ../thesis.tex
 % !TEX encoding = UTF-8 Unicode
-\title{儿科肠道炎症性疾病与肠道菌群相关性研究}
+\title{肠道菌群与儿科肠道炎症性疾病研究}
 \author{刘\quad{}嘉\quad{}奕}
 \advisor{洪莉教授}
 % \coadvisor{某某教授}
-\defenddate{2019年5月}
+\defenddate{2019年4月}
 \school{上海交通大学}
 \institute{上海儿童医学中心}
 \studentnumber{116731910672}
 \major{儿科学}
-\keywords{肠道菌群，高通量测序, 坏死性小肠结肠炎，先天性巨结肠，迟发性败血症，先天性巨结肠相关性小肠结肠炎，炎症性肠病}
+\keywords{肠道菌群，高通量测序, 坏死性小肠结肠炎，先天性巨结肠，迟发型脓毒血症，先天性巨结肠小肠结肠炎，炎症性肠病}
 
-\englishtitle{Pediatric Enterocolitis and Intestinal Microbiota}
+\englishtitle{Intestinal Microbiota and Pediatric Enterocolitis}
 \englishauthor{\textsc{Jiayi Liu}}
 \englishadvisor{Prof. \textsc{Li Hong}}
 % \englishcoadvisor{Prof. \textsc{Uom Uom}}
@@ -22,5 +22,5 @@
   \textsc{School of Medicine, Shanghai Jiao Tong University} \\
   \textsc{Shanghai, P.R.China}}
 \englishmajor{Paediatrics}
-\englishdate{May, 2019}
+\englishdate{April, 2019}
 \englishkeywords{Intestinal Microbiota, High-throughput Sequencing, Necrotizing Enterocolitis, Hirchsprung's Disease, Late-Onset Sepsis, Hirshsprung-Associated Entrocolitis, Inflammatory Bowel Disease}
