--- a/tex/pub.tex
+++ b/tex/pub.tex
@@ -8,6 +8,6 @@
 %%==================================================
 
 \begin{publications}{99}
-    \item\textsc{刘嘉奕，洪莉\textsuperscript{*}}. {人体肠道菌群研究中粪便样品取样与保存方法}[J]. 国际儿科学杂志, 2018（已录用）.
-    \item\textsc{JIAYI LIU, JIANHUA SUN, YUQING LI}, et al. {Patterned progression of gut microbiota predisposes preterm infants to necrotizing enterocolitis and late-onset sepsis}[J]. PeerJ, 2018(In revision).
+    \item \textsc{\textbf{刘嘉奕}，洪莉\textsuperscript{*}}. {人体肠道菌群研究中粪便样品取样与保存方法}[J]. 国际儿科学杂志, 2018（已录用）.
+    \item \textsc{\textbf{JIAYI LIU}, YUQING LI, YI FENG}, et al. {Patterned progression of gut microbiota predisposes preterm infants to necrotizing enterocolitis and late-onset sepsis}[J]. PeerJ, 2018(In revision).
 \end{publications}
