--- a/tex/summary.tex
+++ b/tex/summary.tex
@@ -8,13 +8,26 @@
 %%==================================================
 
 \begin{summary}
+\textit{第一部分、肠道菌群纵向模式与早产儿坏死性小肠结肠炎、迟发型脓毒血症研究}
 
-  本研究利用Illumina Miseq高通量测序平台对坏死性小肠结肠炎和迟发性败血症早产儿出生后肠道菌群进行测序，深入探究其菌群定植的多样性与丰度变化。
+  本研究利用Illumina Miseq高通量测序平台对坏死性小肠结肠炎和迟发型脓毒血症的早产儿肠道菌群进行测序，深入探究其菌群定植的多样性与丰度变化。
 
-  通过描述和比较菌群定植模式，我们发现早产儿出生后肠道菌群定植模式的改变使其易感于坏死性小肠结肠炎和迟发性败血症；肠道菌群模式改变具体表现为菌群多样性降低和潜在性致病菌属相对丰度增加。
+  通过描述和比较菌群定植模式，我们发现早产儿出生后肠道菌群定植模式的改变使其易感于坏死性小肠结肠炎和迟发性脓毒血症；肠道菌群模式改变具体表现为菌群多样性降低和潜在性致病菌属相对丰度增加。
 
   肠道菌群菌群多样性降低表现为疾病组（NEC和LOS组）的粪便样本菌群的丰富度和均匀度均显著低于同时期内的对照组指数；另外，三组组间的菌群构成的相似度随日龄增加而递减。多样性降低的特征在疾病后期及治愈后仍然持续存在。
 
   包括葡球菌、链球菌和克雷博菌在内的潜在致病菌属丰度从NEC和LOS发病前开始增加，并持续增加直到治愈后，这种持续存在的肠道模式可能是此二种疾病病程长、预后差的重要机制。
+
+  综上，本研究支持早产儿坏死型小肠结肠炎和迟发型脓毒血症的“菌群失调假说”，未来应扩大样本量，进一步探寻特定的菌群模式，为此二种疾病的防治提供更坚实的理论依据。
+
+\textit{第二部分、儿科肠道炎症性疾病与肠道菌群研究}
+
+  本研究利用第二代高通量测序平台对先天性巨结肠(HD)、先天性巨结肠相关性小肠结肠炎(HAEC)、坏死型小肠结肠炎(NEC)和炎症性肠病(IBD)四组患儿的肠道菌群进行测序，深入探寻菌群模式与儿科肠道炎症性疾病间的关联。
+
+  通过多样性分析，我们发现三组肠炎患儿肠道菌群多样性相仿，且均低于巨结肠患儿和同龄健康儿童；另外，菌群内部组成和丰度在四组患儿间未见显著性差异，提示菌群失调对于肠道炎症状态的影响是具有一定共性的。
+
+  从进化角度，肠炎患儿菌群在门水平上的组成大致类似，且HAEC患儿菌群的组成和丰度与IBD患儿类似；但具体到属水平则各不相同：HAEC患儿以肠球菌为优势菌属，总体组成成分与HD类似；IBD患儿各菌属丰度大致相当；NEC患儿肠道菌群构成则较为简单，且以克雷博菌属为主导菌。另外，IBD组可见较高水平的韦荣氏球菌，后者与肠道黏膜上皮炎症反映密切相关。
+
+  综上，本研究为儿科肠道炎症性疾病患儿类似的临床表现和病理变化提供了理论依据。如何阻断NEC和HAEC肠道菌群模式的改变，进而改善优化其肠道菌群模式，可能是防治肠炎反复发作、减轻肠炎症状、降低未来并发IBD风险的新途径。
 
 \end{summary}
