--- a/tex/symbol00.tex
+++ b/tex/symbol00.tex
@@ -21,7 +21,7 @@
     IRT & Inhibitor Removal Technology & 阻断物移除技术\\
     LDA & Linear Discriminant Analysis & 线性判别分析\\
     LEfSe & Linear Discriminant Analysis of Effect Size & 多级物种判别分析\\
-    LOS & Late-Onset Sepsis & 迟发型败血症\\
+    LOS & Late-Onset Sepsis & 迟发型脓毒血症\\
     MAMP & Microbial Associated Molecular Patterns & 微生物相关分子模式\\
     NEC & Necrotizing Enterocolitis & 坏死性小肠结肠炎\\
     NGS & Next Generation Sequencing & 下一代测序\\
