--- a/thesis.tex
+++ b/thesis.tex
@@ -57,8 +57,8 @@
 \addcontentsline{toc}{chapter}{\listfigurename}     % 将插图目录加入全文目录
 \listoftables
 \addcontentsline{toc}{chapter}{\listtablename}      % 将表格目录加入全文目录
-\listofalgorithms
-\addcontentsline{toc}{chapter}{\listalgorithmname}  % 将算法目录加入全文目录
+%\listofalgorithms
+%\addcontentsline{toc}{chapter}{\listalgorithmname}  % 将算法目录加入全文目录
 
 %\include{tex/symbol0} % 主要符号、缩略词对照表
 \include{tex/symbol00}
